samples/_failures_safe/1761787617_d55e00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fbcf9a27.c: In function ‘main’:
./samples/SAFE/__tmp_fbcf9a27.c:170:25: error: missing terminating " character
  170 |         fprintf(stderr, "No tokens found
      |                         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fbcf9a27.c:170:9: error: expected expression at end of input
  170 |         fprintf(stderr, "No tokens found
      |         ^~~~~~~
./samples/SAFE/__tmp_fbcf9a27.c:170:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fbcf9a27.c:170:9: error: expected declaration or statement at end of input
